<resources>
    <string name="settings">Settings</string>
    <string name="app_name">Roomify</string>
    <string name="API_KEY">AIzaSyB43z_ebDCKx_yWufJVpFyGPhwY1uQvn_s</string>
    <string name="bus_station_ticket_office">Bus station ticket office</string>
    <string name="ally_s_bus_office">Ally\'s Bus Office</string>
    <string name="university_of_dar_es_salaam">University of Dar es Salaam</string>
    <string name="udsm_main_campus">UDSM Main Campus</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="language">Language</string>
    <string name="add_room">Add Room</string>
    <string name="apartment">Apartment</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="swahili">Swahili</string>
    <string name="no_rooms_available" />
    <string name="description">Description*</string>
    <string name="price_per_month">Price per month*</string>
    <string name="rooms">Rooms*</string>
    <string name="rules_e_g_no_smoking_no_pets">Rules (e.g., No smoking, No pets)</string>
    <string name="add_room1">Add Room</string>
    <string name="my_location">My Location</string>
    <string name="add_room2">Add Room</string>
    <string name="my_location1">My Location</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_connect_to_internet">Please connect to internet...</string>
    <string name="list_your_property">List Your Property</string>
    <string name="property_location">Property Location</string>
    <string name="tap_on_map_to_set_location">Tap on map to set location</string>
    <string name="no_location_selected">No location selected</string>
    <string name="basic_information">Basic Information</string>
    <string name="property_title">Property Title *</string>
    <string name="description1">Description *</string>
    <string name="price">Price *</string>
    <string name="property_type">Property Type *</string>
    <string name="rooms1">Rooms *</string>
    <string name="bathrooms">Bathrooms *</string>
    <string name="area">Area *</string>
    <string name="amenities">Amenities</string>
    <string name="rules_contact">Rules Contact</string>
    <string name="house_rules_optional">House Rules (optional)</string>
    <string name="phone_number">Phone Number *</string>
    <string name="email_address_optional">Email Address (optional)</string>
    <string name="media">Media</string>
    <string name="add_photos">Add Photos</string>
    <string name="_0_photos">0 photos</string>
    <string name="video">Video</string>
    <string name="contract">Contract</string>
    <string name="no_files_selected">No files selected</string>
    <string name="post_property">Post Property</string>
    <string name="favorite">Favorite</string>
    <string name="luxury_apartment">Luxury Apartment</string>
    <string name="_1500">$1500</string>
    <string name="_123_main_street_new_york_ny">123 Main Street, New York, NY</string>
    <string name="available">AVAILABLE</string>
    <string name="_2_bedrooms">2 Bedrooms</string>
    <string name="_1_bathroom">1 Bathroom</string>
    <string name="_850_sq_ft">850 sq ft</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="description11">Description</string>
    <string name="spacious_2_bedroom_apartment_with_modern_amenities">Spacious 2-bedroom apartment with modern amenities...</string>
    <string name="amenities1">Amenities</string>
    <string name="get_directions">Get Directions</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="_4_8_24_reviews">4.8 (24 reviews)</string>
    <string name="member_since_2023">Member since 2023</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="book_now_request_visit">Book Now / Request Visit</string>
    <string name="john_doe">John Doe</string>
    <string name="search_location_or_room">Search location</string>
    <string name="todo">TODO</string>
    <string name="discover_places">Discover Places</string>


    <string name="password">password</string>
    <string name="email1">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_back1">Welcome Back</string>
    <string name="email2">Email</string>
    <string name="password1">Password</string>
    <string name="sign_in1">Sign In</string>
    <string name="log_out">log out</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="default_web_client_id">1041914574744-evaa3p91lu43jr5crr42esqrivkha66m.apps.googleusercontent.com</string>
    <string name="taarifa_binafsi">Taarifa binafsi</string>
    <string name="usalama">Usalama</string>
    <string name="maeneo_yaliyohifadhiwa">Maeneo yaliyohifadhiwa</string>
    <string name="nyumbani">Nyumbani</string>
    <string name="gundua">Gundua</string>
    <string name="akaunti">Akaunti</string>
    <string name="logout">Logout</string>
    <string name="todo1">TODO</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password2">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="owner_full_name">Owner Full Name</string>
    <string name="owner_information">Owner Information</string>
    <string name="list_your_property1">List Your Property</string>
    <string name="property_location1">Property Location</string>
    <string name="map_location">Map Location</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="street_address">Street Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search_address">Search Address</string>
    <string name="no_location_selected1">No location selected</string>
    <string name="basic_information1">Basic Information</string>
    <string name="property_title1">Property Title *</string>
    <string name="description12">Description *</string>
    <string name="price1">Price *</string>
    <string name="property_type1">Property Type</string>
    <string name="rooms12">Rooms</string>
    <string name="bathrooms1">Bathrooms</string>
    <string name="area1">Area</string>
    <string name="amenities12">Amenities</string>
    <string name="rules_and_contact">Rules and Contact</string>
    <string name="house_rules_optional1">House Rules (Optional)</string>
    <string name="phone_number1">Phone Number *</string>
    <string name="email_address_optional1">Email Address (Optional)</string>
    <string name="media1">Media</string>
    <string name="add_photos1">Add Photos</string>
    <string name="_0_5_photos">0/5 photos</string>
    <string name="video1">Video</string>
    <string name="contract1">Contract</string>
    <string name="no_files_selected1">No files selected</string>
    <string name="post_property1">Post Property</string>
    <string name="search">Search</string>
    <string name="make_decision">Make Decision</string>
    <string name="english">English</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="document_name">Document Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>